--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint '{app}/**/**/*.{js,jsx}' '*.js'"
   },
   "jest": {
     "preset": "jest-expo"
