--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   },
   "dependencies": {
     "expo": "^28.0.0",
+    "hoist-non-react-statics": "^2.5.4",
     "prop-types": "^15.6.1",
-    "react": "^16.4.0",
+    "react": "^16.4.1",
     "react-native": "^0.55.4",
     "react-native-svg": "^6.3.1",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
+    "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   }
