--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "jest",
-    "eslint": "eslint '{app}/**/**/*.{js}' '*.js'"
+    "eslint": "eslint 'app/**/**/*.js' '*.js'"
   },
   "jest": {
     "preset": "jest-expo"
