--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-test-renderer": "^16.4.0"
   },
   "dependencies": {
+    "anchor-ui-native": "^1.1.2",
     "expo": "^28.0.0",
     "hoist-non-react-statics": "^2.5.4",
     "prop-types": "^15.6.1",
