--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo": "^28.0.0",
     "hoist-non-react-statics": "^2.5.4",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-native": "^0.55.4",
